--- a/Battleship/res/values/strings.xml
+++ b/Battleship/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="app_name">Battleship</string>
     <string name="action_settings">Settings</string>
     <string name="main_title">Battleship</string>
-
+    <string name="new_game">New Game</string>
+    <string name="title_activity_selection">SelectionActivity</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
 
 </resources>
