--- a/Battleship/res/values/strings.xml
+++ b/Battleship/res/values/strings.xml
@@ -6,8 +6,11 @@
     <string name="main_title">Battleship</string>
     <string name="new_game">New Game</string>
     <string name="title_activity_selection">SelectionActivity</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_A">A</string>
+    <string name="title_B">B</string>
+    <string name="title_C">C</string>
+    <string name="title_D">D</string>
+    <string name="title_E">E</string>
+    <string name="title_F">F</string>
 
 </resources>
