working on grid

--- a/Battleship/res/values/strings.xml
+++ b/Battleship/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="title_activity_scroll_page">ScrollPage</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_scroll_page2">ScrollPage2</string>
+    <string name="title_activity_grid">Grid</string>
 
 </resources>
